Closed
Bug 468562
Opened 17 years ago
Closed 17 years ago
"ASSERTION: Inserting multiple children without flushing"
Categories
(Core :: DOM: HTML Parser, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9.2a1
People
(Reporter: jruderman, Assigned: mozilla+ben)
References
()
Details
(Keywords: assertion, testcase, verified1.9.1, Whiteboard: [needed on 1.9.1 to fix 525276])
Attachments
(3 files)
|
95 bytes,
text/html
|
Details | |
|
103 bytes,
text/html
|
Details | |
|
3.90 KB,
patch
|
mrbkap
:
review+
mrbkap
:
superreview+
samuel.sidler+old
:
approval1.9.1.5+
dveditz
:
approval1.9.1.6+
|
Details | Diff | Splinter Review |
Loading the testcase triggers:
###!!! ASSERTION: Inserting multiple children without flushing.: 'mNumFlushed == mContent->GetChildCount()', file /Users/jruderman/central/content/html/document/src/nsHTMLContentSink.cpp, line 903
Reduced from http://nmuta.fri.macserver.jp/home149.html.
| Reporter | ||
Comment 1•17 years ago
|
||
Adding a "</table>" makes it give me this assertion instead:
###!!! ASSERTION: Node at base of context stack not fully flushed.: 'bottom.mContent->GetChildCount() == bottom.mNumFlushed', file /Users/jruderman/central/content/html/document/src/nsHTMLContentSink.cpp, line 1933
Updated•17 years ago
|
Assignee: nobody → bnewman
| Assignee | ||
Comment 2•17 years ago
|
||
This patch
1. reuses AddLeaf, unifying some code
2. keeps the assertions from failing by calling DidAddContent before it's too late (in AddLeaf)
3. no longer forces <link>s to be appended (they may be inserted at other positions now, too)
| Assignee | ||
Updated•17 years ago
|
Attachment #352628 -
Flags: review?(mrbkap)
| Assignee | ||
Updated•17 years ago
|
Status: NEW → ASSIGNED
Updated•17 years ago
|
Attachment #352628 -
Flags: superreview+
Attachment #352628 -
Flags: review?(mrbkap)
Attachment #352628 -
Flags: review+
Comment 3•17 years ago
|
||
Comment on attachment 352628 [details] [diff] [review]
using AddLeaf instead of AppendChildTo to add <link>s in ProcessLINKTag
[Checkin: Comment 4]
Looks good. r+sr=mrbkap
| Assignee | ||
Updated•17 years ago
|
Keywords: checkin-needed
Comment 4•17 years ago
|
||
Comment on attachment 352628 [details] [diff] [review]
using AddLeaf instead of AppendChildTo to add <link>s in ProcessLINKTag
[Checkin: Comment 4]
http://hg.mozilla.org/mozilla-central/rev/4b94808ccb23
Attachment #352628 -
Attachment description: using AddLeaf instead of AppendChildTo to add <link>s in ProcessLINKTag → using AddLeaf instead of AppendChildTo to add <link>s in ProcessLINKTag
[Checkin: Comment 4]
Updated•17 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
| Reporter | ||
Updated•17 years ago
|
Flags: in-testsuite+
Updated•16 years ago
|
Attachment #352628 -
Flags: approval1.9.1.5?
Updated•16 years ago
|
Updated•16 years ago
|
Attachment #352628 -
Flags: approval1.9.1.5? → approval1.9.1.5+
Comment 5•16 years ago
|
||
Comment on attachment 352628 [details] [diff] [review]
using AddLeaf instead of AppendChildTo to add <link>s in ProcessLINKTag
[Checkin: Comment 4]
Approved for 1.9.1.5, a=dveditz for release-drivers
Comment 6•16 years ago
|
||
Can we get this landed on 1.9.1 ASAP?
Comment 7•16 years ago
|
||
Comment 8•16 years ago
|
||
Jesse, this bug should be all/all, right?
Updated•16 years ago
|
Attachment #352628 -
Flags: approval1.9.1.5+
Comment 9•16 years ago
|
||
This needs to land on the GECKO1914_20091006_RELBRANCH for 1.9.1.5.
blocking1.9.1: .6+ → .5+
status1.9.1:
.6-fixed → ---
Comment 10•16 years ago
|
||
status1.9.1:
--- → .5-fixed
Comment 11•16 years ago
|
||
Verified on 1.9.1 on OS X 10.6 with my own debug 1.9.1 build.
Keywords: verified1.9.1
Comment 12•16 years ago
|
||
Perhaps because it appears in release notes, the summary line of this bug
seems to be drawing attention in some user circles. Users are envisioning
places where (a) flushing occurs, and (b) children are inserted
(and browsers make assertions about these occurrences).
Perhaps we should take slightly more care in wording assertion messages.
| Assignee | ||
Comment 13•16 years ago
|
||
As appalling as it may sound, Firefox flushes (passes off for rendering) trillions, literally trillions, of children (HTML elements) every day. I believe our users are stronger for knowing the truth. And if even just one volunteer joins the project in order to satisfy her morbid curiosity about the watery plight of all those page elements, we are, all of us, that much better off.
Comment 14•16 years ago
|
||
| Reporter | ||
Comment 15•16 years ago
|
||
Comment 16•16 years ago
|
||
Soon we will make wikipedia.
Comment 17•16 years ago
|
||
"Perhaps we should take slightly more care in wording assertion messages."
I think the real fault is the terminology used.
You need to log in
before you can comment on or make changes to this bug.
Description
•