Bug 468562 - "ASSERTION: Inserting multiple children without flushing"; r+sr=mrbkap